added images. updated readme

--- a/index.ipynb
+++ b/index.ipynb
@@ -2544,13 +2544,7 @@
       "16/16 [==============================] - 25s 2s/step - loss: 0.0979 - acc: 0.9620 - val_loss: 0.4505 - val_acc: 0.8125\n",
       "Epoch 62/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0470 - acc: 0.9780 - val_loss: 0.1720 - val_acc: 0.9375\n",
-      "Epoch 63/250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 63/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0992 - acc: 0.9680 - val_loss: 0.2350 - val_acc: 0.9375\n",
       "Epoch 64/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0776 - acc: 0.9740 - val_loss: 0.3373 - val_acc: 0.8125\n",
@@ -2802,13 +2796,7 @@
       "16/16 [==============================] - 25s 2s/step - loss: 0.0628 - acc: 0.9880 - val_loss: 0.5264 - val_acc: 0.8125\n",
       "Epoch 185/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0131 - acc: 0.9960 - val_loss: 1.0421 - val_acc: 0.7500\n",
-      "Epoch 186/250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 186/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0399 - acc: 0.9780 - val_loss: 1.3077 - val_acc: 0.7500\n",
       "Epoch 187/250\n",
       "16/16 [==============================] - 25s 2s/step - loss: 0.0216 - acc: 0.9920 - val_loss: 1.2435 - val_acc: 0.7500\n",
