Minor changes and added markdown

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Final Project Submission\n",
+    "* Student name: Sam Oliver\n",
+    "* Student pace: self paced\n",
+    "* Scheduled project review date/time: 8/29/2022 (11:00am EST)\n",
+    "* Instructor name: Abhineet Kulkarni\n",
+    "* Blog post URL: https://medium.com/@samoliver3/under-the-hood-of-deep-neural-networks-in-tensorflow-using-keras-c5594344bcd1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Overview"
    ]
   },
@@ -1220,13 +1232,21 @@
     "     include_top=True\n",
     ")\n",
     "\n",
-    "vgg_params.trainable = False\n",
+    "vgg_params.trainable = False     # freeze the base model\n",
     "\n",
+    "# create sequential model, add VGG-19 frozen base model, then add more layers\n",
     "mod2 = models.Sequential()\n",
     "mod2.add(vgg_params)\n",
     "mod2.add(Flatten())\n",
     "mod2.add(Dense(64, activation='relu'))\n",
     "mod2.add(Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model follows the \"typical transfer-learning workflow\" layed out in the Keras transfer-learning guide that can be found [here](https://keras.io/guides/transfer_learning/)."
    ]
   },
   {
@@ -3236,7 +3256,7 @@
     "height": "861.111px",
     "left": "51px",
     "top": "111.441px",
-    "width": "426.667px"
+    "width": "426.662px"
    },
    "toc_section_display": true,
    "toc_window_display": true
